--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
 .container-teclado {
     border: 1px solid var(--cor6);
     padding: 5px;
-    border-radius: 20px 20px 30% 30%;
+    border-radius: 5px;
     background-image: linear-gradient(to right, var(--cor9), var(--cor3), var(--cor4));
     box-shadow: 3px 3px 12px var(--cor6);
 }
@@ -40,9 +40,10 @@
     border: 1px solid var(--cor6);
     padding: 3px;
     margin: 3px;
-    width: 20%;
+    width: 2em;
+    height: 2.3em;
     text-align: center;
-    border-radius: 8px;
+    border-radius: 4px;
     background-image: linear-gradient(to left, var(--cor9), var(--cor3), var(--cor4) );
     box-shadow: 3px 3px 6px var(--cor6);
     cursor: pointer;
@@ -57,10 +58,11 @@
  .container-teclado {
     border: 1px solid var(--cor6);
     padding: 5px;
-    border-radius: 20px 20px 30% 30%;
+    border-radius: 5px;
     background-color: rgba(0, 0, 0, 0);
     box-shadow: 3px 3px 12px var(--cor6);
 }
+
 
  .teclado {
     font-weight: bold;
@@ -68,9 +70,10 @@
     border: 1px solid var(--cor6);
     padding: 3px;
     margin: 3px;
-    width: 20%;
+    width: 2em;
+    height: 2.3em;
     text-align: center;
-    border-radius: 8px;
+    border-radius: 4px;
     background-color: rgba(0, 0, 0, 0.048);
     box-shadow: 3px 3px 6px var(--cor6);
     cursor: pointer;
@@ -78,3 +81,21 @@
 .teclado:hover {
     background-image: linear-gradient(to right, var(--cor9), var(--cor3), var(--cor4));
 }
+
+/* Para telas de até 332px */
+@media screen and (max-width: 332px) {
+    .teclado {
+        font-weight: bold;
+        color: rgba(0, 0, 0, 0.747);
+        border: 1px solid var(--cor6);
+        font-size: .9em;
+        margin: 1px;
+        width: 1.2em;
+        height: 2em;
+        text-align: center;
+        border-radius: 3px;
+        background-color: rgba(0, 0, 0, 0.048);
+        box-shadow: 1px 2px 4px var(--cor6);
+        cursor: pointer;
+    }
+  }
